# Rust_Experiments

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml  ci.yml
broken_url_finder/: Cargo.toml  README.md  README.txt
broken_url_finder/Inputs/files/: sample7.txt
broken_url_finder/Inputs/folders/1/a/a/a/a/a/a/a/a/a/a/a/: treasure.txt
broken_url_finder/Inputs/sample/inside/: sample3.txt  sample5.txt  sample6.txt  sample8.txt
broken_url_finder/benches/: reading_benchmark.rs
broken_url_finder/src/: async_await.rs  channels.rs  lib.rs  main.rs  no_parallelization.rs  parallelization.rs
