[package]
name = "broken_url_finder"
version = "0.1.0"
edition = "2021"
about = "This program accepts a path to a directory and recursively searches through files for broken URLs inside them."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = {version = "1.17", features = ["full"]}
futures = "0.3"
async-recursion = "1.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "reading_benchmark"
harness = false